# Solar

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  GameEngine.sln  README.md  Solar.sln  format.sh  imgui.ini  imgui.ini.template  vcpkg.json
Solar/: CMakeLists.txt  Solar.h  Solar.vcxproj  Solar.vcxproj.filters  solpch.cpp  solpch.h
Solar/Core/: CMakeLists.txt
Solar/Core/Base/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Sundry.h  Timer.h  Timestep.h  Window.h
Solar/Core/Debug/: Instrumentor.h
Solar/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Solar/Core/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Solar/Core/Math/: Math.cpp  Math.h
Solar/Core/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Solar/Core/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Solar/Core/Utils/: PlatformUtils.h
Solar/Platform/: CMakeLists.txt
Solar/Platform/OpenGL/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Solar/Platform/Windows/: CMakeLists.txt  WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Solar/core/base/: application.cpp  application.h  entrypoint.h  input.h  key_codes.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  window.h
Solar/core/debug/: assert.h  instrumentor.h
Solar/core/events/: application_event.h  event.h  key_event.h  mouse_event.h
Solar/core/imgui/: imgui_layer.cpp  imgui_layer.h
Solar/core/math/: math.cpp  math.h  size.h
Solar/core/renderer/: buffer.h  camera.h  editor_camera.cpp  editor_camera.h  framebuffer.h  graphics_context.h  orthographic_camera.cpp  orthographic_camera.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  render_command.cpp  render_command.h  renderer.cpp  renderer2d.cpp  renderer2d.h  renderer2d_data.h  renderer_api.cpp  renderer_api.h  shader.h  shader_data_type.h  subtexture2d.cpp  subtexture2d.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
Solar/core/scene/: components.h  entity.h  scene.cpp  scene.h  scene_camera.cpp  scene_camera.h  scene_serializer.cpp  scene_serializer.h  scriptable_entity.h
Solar/core/utils/: image.cpp  image.h  misc.h
Solar/dependence/entt/include/: entt.hpp
Solar/editor/: editor_layer.cpp  editor_layer.h  solarium_app.cpp
Solar/editor/panels/: content_browser_panel.cpp  scene_hierarchy_panel.cpp
Solar/platform/opengl/: buffer.cpp  buffer.h  context.cpp  context.h  framebuffer.cpp  framebuffer.h  opengl_buffer.cpp  opengl_context.cpp  opengl_framebuffer.cpp  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  renderer_api.cpp  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
Solar/platform/windows/: input.cpp  platform_utils.cpp  window.cpp  window.h  windows_input.cpp  windows_platform_utils.cpp  windows_window.cpp
Solar/project/GLFW/: GLFW.vcxproj  GLFW.vcxproj.filters
Solar/project/Glad/: GLAD.vcxproj  GLAD.vcxproj.filters
Solar/project/Imgui/: ImGui.vcxproj  ImGui.vcxproj.filters
Solar/project/yaml-cpp/: yaml-cpp.vcxproj  yaml-cpp.vcxproj.filters
Solar/src/: Solar.h  solpch.cpp  solpch.h
Solar/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imgui_impl_opengl3.cpp
Solar/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Solar/src/Solar/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Solar/src/Solar/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  MouseCodes.h  PlatformDetection.h  Timestep.h  Window.h
Solar/src/Solar/Debug/: Instrumentor.h
Solar/src/Solar/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Solar/src/Solar/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Solar/src/Solar/Math/: Math.cpp  Math.h
Solar/src/Solar/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  RenderCommand.cpp  (+16 more)
Solarium/: CMakeLists.txt  Solarium.vcxproj  Solarium.vcxproj.filters  imgui.ini
Solarium/assets/scenes/: Example.solar  Example.yaml  PinkCube.solar
Solarium/assets/shaders/: Square.glsl  Texture.glsl  Triangle.glsl
Solarium/src/: EditorLayer.cpp  EditorLayer.h  SolariumApp.cpp  editor_layer.cpp  editor_layer.h  solarium_app.cpp
Solarium/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Solarium/src/panels/: content_browser_panel.cpp  content_browser_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h
(+31 files in other folders)
